[docs] update Hive Metastore integration and Impala integration docs
This commit updates the upgrade process for the Hive Metastore integration
doc. It also adjusts Impala integration doc to add sections to explain
how it works together with the Hive Metastore integration.

Staged versions here:
https://github.com/andrwng/kudu/blob/hms-docs/docs/hive_metastore.adoc
https://github.com/andrwng/kudu/blob/hms-docs/docs/kudu_impala_integration.adoc

Change-Id: I8726a39d56c4e9954f208700e99e7bcf2bbc290d

--- a/docs/security.adoc
+++ b/docs/security.adoc
@@ -278,6 +278,7 @@ The following configurations must be set on the tablet servers:
 --tserver_enforce_access_control=true
 ```
 
+[[trusted-users]]
 === Trusted Users
 
 It may be desirable to allow certain users to view and modify any data stored
