KUDU-2975: Spread WAL across multiple directories
Add a new gflag named "fs_wal_dirs" to support spreading WAL across
multiple directories.

Use a new class named "WalDirManager" to manage the WAL dirs. Every WAL
directory has an UUID, We record the directory's UUID and all
directories's UUIDs into a file named "wal_manager_instance". We also record
the tablet's WAL directory UUID into the tablet's metadata. We determine the
tablet WAL location based on the dir UUID recorded in metadata at
reboot.

// TODO: fix this
If switch 'fs_wal_dir' to 'fs_wal_dirs', first we need use "kudu fs
update_dirs" tool to update the WAL dir. We should make sure that the
new configuration includes the old ones, otherwise some tablets may be
failed after startup.

Because the tablet's metadata in old version had no WAL directory, we
look for the tablet's WAL directory under all the new WAL directories.
If found, we write the tablet's WAL into WalDirManager. We'll first
register the WAL directory in memory, and the next time the metadata is
flushed, the UUID is persisted to disk.

In this version, one of the WAL directorys's structure looks like this:

  wal
  - instance
  - wals
  -- wal_manager_instance
  -- tablet1_uuid
  --- index.0
  --- wal.0
  -- tablet2_uuid
  --- index.0
  --- wal.0

Some WAL directories are allowed to be missing at startup. Or some disks
that hold WAL are allowed to be failed at startup. If the tablets
located on failed WAL directories, they can be recovered by master.

Change-Id: Ic3490b2bbc0544e7c8a5f987fb83855ff155ac2c

--- a/docs/administration.adoc
+++ b/docs/administration.adoc
@@ -1201,18 +1201,18 @@ UNIX user, typically `kudu`.
   bring the entire cluster offline while performing the update.
 
 . Run the tool with the desired directory configuration flags. For example, if a
-  cluster was set up with `--fs_wal_dir=/wals`, `--fs_metadata_dir=/meta`, and
+  cluster was set up with `--fs_wal_dir=/wal/1`, `--fs_metadata_dir=/meta`, and
   `--fs_data_dirs=/data/1,/data/2,/data/3`, and `/data/3` is to be removed (e.g.
-  due to a disk error), run the command:
+  due to a disk error), and `/wal/2` is to be added, run the command:
 
 +
 [source,bash]
 ----
-$ sudo -u kudu kudu fs update_dirs --force --fs_wal_dir=/wals --fs_metadata_dir=/meta --fs_data_dirs=/data/1,/data/2
+$ sudo -u kudu kudu fs update_dirs --force --fs_wal_dirs=/wal/1,/wal/2 --fs_metadata_dir=/meta --fs_data_dirs=/data/1,/data/2
 ----
 +
 
-. Modify the values of the `fs_data_dirs` flags for the updated sever. If using
+. Modify the values of the `fs_data_dirs` or `fs_wal_dirs` flags for the updated sever. If using
   CM, make sure to only update the configurations of the updated server, rather
   than of the entire Kudu service.
 
